--- a/newsletter.css
+++ b/newsletter.css
@@ -1,5 +1,9 @@
 #newsletterML table{margin:10px;}
 #newsletterML table td{vertical-align:middle;padding:2px;}
 #newsletterML table td:nth-child(1){padding-right:20px;}
-#newsletterML table td:nth-child(2){font-weight:700;font-size:120%;color:red;cursor:pointer;}
+#newsletterML table td:nth-child(2){padding-right:20px;color:#666;}
+#newsletterML table td:nth-child(3){font-weight:700;font-size:120%;color:red;cursor:pointer;text-align:center;}
 #newsletterResult{border-left:2px solid red;padding:5px;width:70%;display:none;}
+.newsletterGroup{padding:10px 0;}
+.newsletterGroup span{border:1px solid #ccc;padding:2px 3px;margin:2px;background-color:#ddd;border-radius:2px;}
+.newsletterGroup span input{vertical-align:middle;}
